prevents jumping of the screen when scrollbar appears

--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,7 @@ a {
 :root {
   --desktopWidth: 1020px;
 }
+
+html {
+  scrollbar-gutter: stable;
+}
